<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/select_nan"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="54dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nan"
            android:textSize="16dp"
            android:textColor="@color/top_heiziti"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/huihuisebiankuang"
        android:layout_height="2px"/>
    <LinearLayout
        android:id="@+id/select_nv"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="54dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nv"
            android:textSize="16dp"
            android:textColor="@color/top_heiziti"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/edit_hui"
        android:layout_height="10dp"/>
    <LinearLayout
        android:id="@+id/select_dismiss"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:layout_height="54dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_dialog_cached_cancel"
            android:textSize="18dp"
            android:textColor="@color/yanzhengma"
            />
    </LinearLayout>
</LinearLayout>