<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#60000000"
    android:orientation="vertical">



        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:background="@drawable/alert_dialog_bg">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/disanfang"
                android:textColor="#343434"
                android:textSize="18dp"
                android:textStyle="normal" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginTop="45dp">

                <LinearLayout
                    android:id="@+id/man_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/man" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:text="@string/nan"
                        android:textSize="18dp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/man_layout_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/man_check" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:text="@string/nan"
                        android:textSize="18dp"
                        android:textColor="@color/fenhong"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/woman_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/woman" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:text="@string/nv"
                        android:textSize="18dp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/woman_layout_check"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/women_check" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="14dp"
                        android:text="@string/nv"
                        android:textSize="18dp"
                        android:textColor="@color/fenhong"
                        android:textStyle="normal" />
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:id="@+id/queding"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="55dp"
                android:background="@drawable/drawable_bottom_coner"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/queding"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
</LinearLayout>